--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,12 +13,11 @@ navigation:
 - text: "Editorial Board"
   url: "/board.html" 
 ---
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
 <html>
 <head>
-  <title>{{title}}</title>
+  <title>{{page.title}}. The R Journal</title>
   <link rel="stylesheet" type="text/css" href="/r-journal.css">
   <link rel="alternate" type="application/rss+xml" title="Rjournal RSS feed"
     href="/rss.xml">
