Better yaml names

--- a/_layouts/issue.html
+++ b/_layouts/issue.html
@@ -5,12 +5,13 @@ layout: default
 {{content}}
 
 <ul>
-{% for articles in site.articles %}
-  {% unless article.year == page.year %}
-  {% for article in articles.articles %} 
+
+{% for issue in site.issues %}
+  {% if issue.issue == page.issue %}
+  {% for article in issue.articles %} 
     <li><p><a href="{{article.url}}">{{article.title}}</a>.<br/>
       {{article.authors}}</p></li>
   {% endfor %}
-  {% endunless %}
+  {% endif %}
 {% endfor %}
 </ul>
