Add accepted articles and correct url in layout

--- a/_layouts/issue.html
+++ b/_layouts/issue.html
@@ -9,7 +9,7 @@ layout: default
 {% for issue in site.issues %}
   {% if issue.issue == page.issue %}
   {% for article in issue.articles %} 
-    <li><p><a href="{{article.url}}">{{article.title}}</a>.<br/>
+    <li><p><a href="archive/{{issue.issue}}/{{article.url}}">{{article.title}}</a>.<br/>
       {{article.authors}}</p></li>
   {% endfor %}
   {% endif %}
