--- a/_layouts/issue.html
+++ b/_layouts/issue.html
@@ -4,14 +4,19 @@ layout: default
 
 {{content}}
 
-<ul>
-
 {% for issue in site.issues %}
   {% if issue.issue == page.issue %}
-  {% for article in issue.articles %} 
-    <li><p><a href="archive/{{issue.issue}}/{{article.url}}">{{article.title}}</a>.<br/>
-      {{article.authors}}</p></li>
-  {% endfor %}
+    {% for article in issue.articles %} 
+      {% if article.heading %}
+<h3>{{article.heading}}</h3>
+      {% else %}
+<p>
+  <a href="{{article.url}}">{{article.title}}</a>.<br />
+  {{article.authors}}
+  <span class="page">{{article.page}}</span>
+</p>
+      {% endif %}
+    {% endfor %}
   {% endif %}
 {% endfor %}
 </ul>
