--- a/r-journal.css
+++ b/r-journal.css
@@ -23,6 +23,8 @@ body {
     margin-top: -5em;
 }
 
+.page {float: right; margin-top: -1em; margin-right: 10em;}
+
 body, td {
     font-family: Verdana,'DejaVu Sans', 'Lucida Grande', 'Bitstream Vera Sans', sans-serif;
     font-size:13px;
