Consistent url scheme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,11 @@ navigation:
 - text: "Home"
   url: "/index.html"
 - text: "Current Issue"
-  url: "/current.html" 
+  url: "/archive/2012-2" 
 - text: "Accepted Articles"
-  url: "/accepted.html" 
+  url: "/archive/accepted/" 
 - text: "Archive"
-  url: "/archive.html" 
+  url: "/archive" 
 - text: "Submissions"
   url: "/submissions.html" 
 - text: "Editorial Board"
