--- a/_layouts/issue.html
+++ b/_layouts/issue.html
@@ -4,6 +4,8 @@ layout: default
 
 {{content}}
 
+<h1>{{page.title}}</h1>
+
 {% for issue in site.issues %}
   {% if issue.issue == page.issue %}
     {% for article in issue.articles %} 
@@ -13,7 +15,7 @@ layout: default
 <p>
   <a href="{{article.url}}">{{article.title}}</a>.<br />
   {{article.authors}}
-  <span class="page">{{article.page}}</span>
+  {% if article.page %}<span class="page">{{article.page}}</span>{% endif %}
 </p>
       {% endif %}
     {% endfor %}
