First pass at archives for all articles

--- a/_layouts/issue.html
+++ b/_layouts/issue.html
@@ -14,8 +14,8 @@ layout: default
       {% else %}
 <p>
   <a href="{{article.url}}">{{article.title}}</a>.<br />
-  {{article.authors}}
-  {% if article.page %}<span class="page">{{article.page}}</span>{% endif %}
+  {{article.author | join: ", "}}
+  {% if article.pages %}<span class="page">{{article.pages[0]}}</span>{% endif %}
 </p>
       {% endif %}
     {% endfor %}
