--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,14 +13,15 @@ navigation:
 - text: "Editorial Board"
   url: "/board.html" 
 ---
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html>
 
 <html>
 <head>
-  <title>{{page.title}}. The R Journal</title>
+  <title>{%if page_title %}{{page_title}}{% else %}{{page.title}}{% endif %}. The R Journal</title>
   <link rel="stylesheet" type="text/css" href="/r-journal.css">
   <link rel="alternate" type="application/rss+xml" title="Rjournal RSS feed"
     href="/rss.xml">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 
 <body>
