--- a/_layouts/issue-bib.html
+++ b/_layouts/issue-bib.html
@@ -8,7 +8,7 @@ layout: default
 
 <ul>
 {% for article in issue.articles %}{% if article.slug %}
-  <li>{{article.author | join: ", "}}. {{article.title}}. <i>The R Journal</i>, {{issue.volume}}({{issue.num}}):{{article.pages | join: "-"}}, {{issue.month}} {{issue.year}}.</li>
+  <li>{{article.author | join: ", "}}. <a href="RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf">{{article.title}}</a>. <i>The R Journal</i>, {{issue.volume}}({{issue.num}}):{{article.pages | join: "-"}}, {{issue.month}} {{issue.year}}.</li>
 <pre>
 @Article{RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}},
   author       = { {{article.author | join: " and "}} },
