--- a/_layouts/issue.html
+++ b/_layouts/issue.html
@@ -9,12 +9,16 @@ layout: default
 
 <h1>{{page.title}}</h1>
 
+<p><a href="index-bib.html">Complete bibliography</a></p>
+
+<h2>Articles</h2>
+
 {% for article in issue.articles %} 
   {% if article.heading %}
 <h3>{{article.heading}}</h3>
   {% else %}
 <p>
-  <a href="{{article.url}}">{{article.title}}</a>.<br />
+  <a href="RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf">{{article.title}}</a>.<br />
   {{article.author | join: ", "}}
   {% if article.pages %}<span class="page">{{article.pages[0]}}</span>{% endif %}
 </p>
