--- a/r-journal.css
+++ b/r-journal.css
@@ -12,6 +12,20 @@ body {
     font-weight: normal;
 }
 
+h1 {
+    font-size: 2.2em; 
+    font-weight:normal;
+    color: #333;}
+
+h2 {
+    font-size:1.3em;
+    margin-top: 1.5em;
+}
+
+h3 {
+    font-size:1.17em;
+}
+
 #header img {
     padding: 0px 10px 0px 0px;
     vertical-align: -10%;
@@ -97,20 +111,6 @@ div#content {
     margin-left:200px;
 }
 
-div#content h1 {
-    font-size:1.45em
-}
-
-div#content h2 {
-    font-size:1.3em
-}
-
-div#content h3 {
-    font-size:1.17em;
-    margin:0px;
-    padding:15px 0px;
-}
-
 div#content a {
     color: #5a6488;
 }
@@ -142,3 +142,8 @@ div#content dd {
 #c0cafd R light blue
 #e4ecff R very light blue
 */
+
+pre {
+    background-color: #eee;
+    padding: 4px;
+}
