Add new config and update layout

--- a/_layouts/issue.html
+++ b/_layouts/issue.html
@@ -11,7 +11,7 @@ layout: default
 
 <p><a href="index-bib.html">Complete bibliography</a></p>
 
-<h2>Articles</h2>
+<h2>Contributed Research Articles</h2>
 
 {% for article in issue.articles %} 
   {% if article.heading %}
@@ -25,6 +25,11 @@ layout: default
   {% endif %}
 {% endfor %}
 
+<h2>News and Notes</h2>
+
+{% for note in issue.notes %} 
+<p>{{note.title}}. <span class="page">{{note.page}}</span></p>
+{% endfor %}
 
 {% endif %}
 {% endfor %}
