Improve display of issues page

--- a/r-journal.css
+++ b/r-journal.css
@@ -26,6 +26,10 @@ h3 {
     font-size:1.17em;
 }
 
+li {
+    margin-bottom: 0.5em;
+}
+
 #header img {
     padding: 0px 10px 0px 0px;
     vertical-align: -10%;
