Tweak issue headings

--- a/_layouts/issue.html
+++ b/_layouts/issue.html
@@ -9,26 +9,32 @@ layout: default
 
 <h1>{{page.title}}</h1>
 
+<p><a href="Rjournal_{{issue.issue}}.pdf">Complete issue</a></p>
 <p><a href="index-bib.html">Complete bibliography</a></p>
 
-<h2>Contributed Research Articles</h2>
+<h2>Table of contents</h2>
+
+<p>Editorial <span class="page">3</span></p>
+
+
+<h2>Contributed research articles</h2>
 
 {% for article in issue.articles %} 
   {% if article.heading %}
 <h3>{{article.heading}}</h3>
   {% else %}
 <p>
-  <a href="RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf">{{article.title}}</a>.<br />
+  <a href="RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf">{{article.title}}</a><br />
   {{article.author | join: ", "}}
   {% if article.pages %}<span class="page">{{article.pages[0]}}</span>{% endif %}
 </p>
   {% endif %}
 {% endfor %}
 
-<h2>News and Notes</h2>
+<h2>News and notes</h2>
 
 {% for note in issue.notes %} 
-<p>{{note.title}}. <span class="page">{{note.page}}</span></p>
+<p>{{note.title}} <span class="page">{{note.page}}</span></p>
 {% endfor %}
 
 {% endif %}
