Tweak issue layout for accepted page

--- a/_layouts/issue.html
+++ b/_layouts/issue.html
@@ -9,6 +9,8 @@ layout: default
 
 <h1>{{page.title}}</h1>
 
+{% if issue.issue != "accepted" %}
+
 <p><a href="Rjournal_{{issue.issue}}.pdf">Complete issue</a></p>
 <p><a href="index-bib.html">Complete bibliography</a></p>
 
@@ -16,6 +18,7 @@ layout: default
 
 <p>Editorial <span class="page">3</span></p>
 
+{% endif %}
 
 <h2>Contributed research articles</h2>
 
@@ -31,11 +34,15 @@ layout: default
   {% endif %}
 {% endfor %}
 
+{% if issue.issue != "accepted" %}
+
 <h2>News and notes</h2>
 
 {% for note in issue.notes %} 
 <p>{{note.title}} <span class="page">{{note.page}}</span></p>
 {% endfor %}
+
+{% endif %}
 
 {% endif %}
 {% endfor %}
