Fix broken link to complete issue

--- a/_layouts/issue.html
+++ b/_layouts/issue.html
@@ -11,7 +11,7 @@ layout: default
 
 {% if issue.issue != "accepted" %}
 
-<p><a href="Rjournal_{{issue.issue}}.pdf">Complete issue</a></p>
+<p><a href="RJournal_{{issue.issue}}.pdf">Complete issue</a></p>
 <p><a href="index-bib.html">Complete bibliography</a></p>
 
 <h2>Table of contents</h2>
