Better subtype display

--- a/_layouts/issue.html
+++ b/_layouts/issue.html
@@ -27,7 +27,9 @@ layout: default
 <h3>{{article.heading}}</h3>
   {% else %}
 <p>
-  <a href="RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf">{{article.title}}</a><br />
+  {% if article.type %}<strong>{{ article.type }}</strong><br />{% endif %}
+  <a href="RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf">
+  {{article.title}}</a><br />
   {{article.author | join: ", "}}
   {% if article.pages %}<span class="page">{{article.pages[0]}}</span>{% endif %}
 </p>
