Fix page number layout

--- a/_layouts/issue.html
+++ b/_layouts/issue.html
@@ -26,7 +26,7 @@ layout: default
   {% if article.heading %}
 <h3>{{article.heading}}</h3>
   {% else %}
-<p>
+<p class="article">
   {% if article.type %}<strong>{{ article.type }}</strong><br />{% endif %}
   <a href="RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf">
   {{article.title}}</a><br />
