--- a/r-journal.css
+++ b/r-journal.css
@@ -1,7 +1,6 @@
 body {
     margin:20px 50px;
     padding: 0 0 10px 0;
-    min-width:750px;
     background-color: white;
 }
 
@@ -41,7 +40,9 @@ li {
     margin-top: -5em;
 }
 
-.page {float: right; margin-top: -1em; margin-right: 10em;}
+
+p {position: relative; padding-right: 5em;}
+.page {position: absolute; right: 0; top: 0;}
 
 body, td {
     font-family: Verdana,'DejaVu Sans', 'Lucida Grande', 'Bitstream Vera Sans', sans-serif;
