--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@ navigation:
 <body>
 
 <div id="header">
-<h1>The <img src="/r-logo.png" width="101" height="77" /> Journal</h1>
+<h1>The <img src="/r-logo.png" width="101" height="77" alt="R" /> Journal</h1>
 
-<p id="rss"><a href="/rss.xml"><img src="/rss.png">RSS Feed</a><br />
+<p id="rss"><a href="/rss.xml"><img src="/rss.png" alt="">RSS Feed</a><br />
 ISSN: 2073-4859</p>
 </div>
 
