--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@ navigation:
   <title>{%if page_title %}{{page_title}}{% else %}{{page.title}}{% endif %}. The R Journal</title>
   <link rel="stylesheet" type="text/css" href="/r-journal.css">
   <link rel="alternate" type="application/rss+xml" title="Rjournal RSS feed"
-    href="/rss.xml">
+    href="/rss.atom">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 
@@ -29,7 +29,7 @@ navigation:
 <div id="header">
 <h1>The <img src="/r-logo.png" width="101" height="77" alt="R" /> Journal</h1>
 
-<p id="rss"><a href="/rss.xml"><img src="/rss.png" alt="">RSS Feed</a><br />
+<p id="rss"><a href="/rss.atom"><img src="/rss.png" alt="">RSS Feed</a><br />
 ISSN: 2073-4859</p>
 </div>
 
