--- a/_layouts/issue-bib-new.html
+++ b/_layouts/issue-bib-new.html
@@ -12,8 +12,8 @@ layout: default
 <pre>
 @Article{ {{article.slug}}:{{issue.year}},
   author       = { {{article.author | join: " and "}} },
-  title        = { { {{article.title}} } },
-  journal      = { {The R Journal} },
+  title        = { {{article.title}} },
+  journal      = { The R Journal },
   year         = { {{issue.year}} },
   volume       = { {{issue.volume}} },
   number       = { {{issue.num}} },
