Better bib (thanks to BG)

--- a/_layouts/issue-bib-new.html
+++ b/_layouts/issue-bib-new.html
@@ -18,7 +18,7 @@ layout: default
   volume       = { {{issue.volume}} },
   number       = { {{issue.num}} },
   pages        = { {{article.pages | join: "--"}} },
-  month        = { {{issue.month}} },
+  month        = {{issue.month}},
   url          = { http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/{{article.slug}}.pdf }
 }
 </pre>
