Layout embeds more metadata and links original article

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -50,6 +50,11 @@ ISSN: 2073-4859</p>
 </ul></div>
 
 <div id="content">
+
+  <h1><a href="{{page.pdf}}">{{page.title}}</a></h1>
+  <h2> {% for author in page.author %} {{ author }}    {% endfor %}
+  <em>{{site.title}}</em>  {{page.vol}}({{page.num}}) pp {{ page.pages[0] }} -- {{page.pages[1] }}  {{ page.year }} </h2>  
+  
 {{content}}
 </div>
 
