--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -1,15 +1,17 @@
 <meta name="citation_title" content="{{ page.title }}"/>
 {% for author in page.author %}  
 <meta name="citation_author" content="{{ author }}"/> {% endfor %}
-<meta name="citation_publication_date" content="{{ page.issue }}"/>
+<meta name="citation_publication_date" content="{{ page.year }}"/>
 <meta name="citation_journal_title" content="{{ site.title }}"/>
-<meta name="citation_issue" content="{{ page.issue }}"/>
+<meta name="citation_issue" content="{{ page.num }}"/>
+<meta name="citation_volume" content="{{ page.volume }}"/>
 <meta name="citation_firstpage" content="{{ page.pages[0] }}"/>
 <meta name="citation_lastpage" content="{{ page.pages[1] }}"/>
 <meta name="citation_pdf_url" content="{{ page.pdf }}"/>
 
 
 <meta property="dc:title" content="{{ page.title }}" />
+<meta property="dc:date" content="{{ page.year }}" />
 <meta property="dc:format" content="text/html" />
 <meta property="dc:language" content="en" />
 <meta property="dc:identifier" content="{{ page.url }}" />
