trying to style submission form

--- a/r-journal.css
+++ b/r-journal.css
@@ -152,3 +152,25 @@ pre {
     background-color: #eee;
     padding: 4px;
 }
+
+span.highlight{ 
+    color: red;                
+}
+
+form#newsubmission { width : 75%; }  
+
+
+form#newsubmission p {  
+    font-weight: bold;
+}
+
+form#newsubmission input textarea {
+    width: 80%;
+    font-family: inherit;
+}
+
+form#newsubmission textarea {
+    height: 100px;
+}
+
+
