still trying to style submission form

--- a/r-journal.css
+++ b/r-journal.css
@@ -164,7 +164,7 @@ form#newsubmission p {
     font-weight: bold;
 }
 
-form#newsubmission input textarea {
+form#newsubmission input[type=text] textarea {
     width: 80%;
     font-family: inherit;
 }
