more submissions style changes

--- a/r-journal.css
+++ b/r-journal.css
@@ -164,12 +164,13 @@ form#newsubmission p {
     font-weight: bold;
 }
 
-form#newsubmission input[type=text] textarea {
+form#newsubmission input[type="text"] {
     width: 80%;
     font-family: inherit;
 }
 
 form#newsubmission textarea {
+    width: 90%;
     height: 100px;
 }
 
