more submissions style changes

--- a/r-journal.css
+++ b/r-journal.css
@@ -157,7 +157,10 @@ span.highlight{
     color: red;                
 }
 
-form#newsubmission { width : 75%; }  
+form#newsubmission { 
+    width : 75%; 
+    padding-left: 10%;
+}  
 
 
 form#newsubmission p {  
@@ -170,7 +173,7 @@ form#newsubmission input[type="text"] {
 }
 
 form#newsubmission textarea {
-    width: 90%;
+    width: 80%;
     height: 100px;
 }
 
