more submissions style changes

--- a/r-journal.css
+++ b/r-journal.css
@@ -158,12 +158,13 @@ span.highlight{
 }
 
 form#newsubmission { 
-    width : 75%; 
+    width : 95%; 
 }  
 
 
 form#newsubmission p {  
     font-weight: bold;
+    font-size: 90%;
 }
 
 form#newsubmission input[type="text"] {
@@ -174,6 +175,7 @@ form#newsubmission input[type="text"] {
 form#newsubmission textarea {
     width: 80%;
     height: 100px;
+    font-family: inherit;
 }
 
 
