--- a/_layouts/issue-bib.html
+++ b/_layouts/issue-bib.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+{% assign lbrace = '{' %}
+
 {% for issue in site.issues %}
 {% if issue.issue == page.issue %}
 <h1>Bibtex for {{issue.year}}/{{issue.num}}</h1>
@@ -11,15 +13,15 @@ layout: default
   <li>{{article.author | join: ", "}}. <a href="RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf">{{article.title}}</a>. <i>The R Journal</i>, {{issue.volume}}({{issue.num}}):{{article.pages | join: "-"}}, {{issue.month}} {{issue.year}}.</li>
 <pre>
 @Article{RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}},
-  author       = { {{article.author | join: " and "}} },
-  title        = { { {{article.title}} } },
-  journal      = { {The R Journal} },
-  year         = { {{issue.year}} },
-  volume       = { {{issue.volume}} },
-  number       = { {{issue.num}} },
-  pages        = { {{article.pages | join: "--"}} },
-  month        = { {{issue.month}} },
-  url          = { http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf }
+  author       = {{lbrace}}{{article.bibauthor | join: " and " }}},
+  title        = {{lbrace}}{{article.bibtitle}}},
+  journal      = {The R Journal},
+  year         = {{issue.year}},
+  volume       = {{issue.volume}},
+  number       = {{issue.num}},
+  pages        = {{lbrace}}{{{article.pages | join: "--"}}},
+  month        = {{issue.bibmonth}},
+  url          = {http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf}
 }
 </pre>
   </li>
