RJournal.bib corrected

--- a/_layouts/issue-bib-new.html
+++ b/_layouts/issue-bib-new.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 {% assign lbrace = '{' %}
+{% assign rbrace = '}' %}
 
 {% for issue in site.issues %}
 {% if issue.issue == page.issue %}
@@ -13,8 +14,8 @@ layout: default
   <li>{{article.author | join: ", "}}. <a href="{{article.slug}}.pdf">{{article.title}}</a>. <i>The R Journal</i>, {{issue.volume}}({{issue.num}}):{{article.pages | join: "-"}}, {{issue.month}} {{issue.year}}.</li>
 <pre>
 @Article{{lbrace}}{{article.slug}}:{{issue.year}},
-  author       = {{lbrace}}{{article.bibauthor | join: " and " }}},
-  title        = {{lbrace}}{{article.bibtitle}}},
+{% if article.bibauthor %}  author       = {{lbrace}}{{article.bibauthor | join: " and " }}{{rbrace}}, {% else %}  author       = {{lbrace}}{{article.author | join: " and "}}{{rbrace}}, {% endif %}
+{% if article.bibtitle %}  title        = {{lbrace}}{{article.bibtitle}}{{rbrace}}, {% else %}  title        = {{lbrace}}{{article.title}}{{rbrace}}, {% endif %}
   journal      = {The R Journal},
   year         = {{issue.year}},
   volume       = {{issue.volume}},
