--- a/_layouts/issue-bib.html
+++ b/_layouts/issue-bib.html
@@ -20,7 +20,7 @@ layout: default
   year         = {{issue.year}},
   volume       = {{issue.volume}},
   number       = {{issue.num}},
-  pages        = {{lbrace}}{{{article.pages | join: "--"}}},
+  pages        = {{lbrace}}{{article.pages | join: "--"}}{{rbrace}},
   month        = {{issue.bibmonth}},
   url          = {http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf}
 }
