--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@ navigation:
 <body>
 
 <div id="header">
-<h1>The <img src="/r-logo.png" width="101" height="77" alt="R" /> Journal</h1>
+<h1>The <img src="/RLogo.png" width="101" height="77" alt="R" /> Journal</h1>
 
 <p id="rss"><a href="/rss.atom"><img src="/rss.png" alt="">RSS Feed</a><br />
 ISSN: 2073-4859</p>
