--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,10 @@ navigation:
 
 <html>
 <head>
-  <title>{%if page_title %}{{page_title}}{% else %}{{page.title}}{% endif %}. The R Journal</title>
+  <title>{%if page_title %}{{page_title}}{% else %}{{page.title}}{% endif %} The R Journal</title>
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
+
   <link rel="stylesheet" type="text/css" href="/r-journal.css">
   <link rel="alternate" type="application/rss+xml" title="Rjournal RSS feed"
     href="/rss.atom">
