--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -3,6 +3,9 @@ comment: This is the layout for a landing page for single articles from 2017
 layout: default
 ---
 
+{% assign lbrace = '{' %}
+{% assign rbrace = '}' %}
+
 {{content}}
 
 {% for issue in site.issues %}
@@ -11,33 +14,34 @@ layout: default
   {% for article in issue.articles %} 
    {% if article.slug == page.slug %}
 
-    <h3>Accepted article</h3>
-    This article will be copy edited and may be changed before publication.
-    <br />
+    {% if page.issue == "accepted" %}
+      <h3>Accepted article</h3>
+      This article will be copy edited and may be changed before publication.
+      <br />
+    {% else %}
+      <h3>Don't go here yet</h3>
+    {% endif %}
     <p class="article">
     <a href="{{article.slug}}.pdf" target="_blank">{{article.title}}</a><br />
-    {{article.author | join: ", "}}
+    {% for auth in article.author %}{% if forloop.first %}{{auth}}{% elsif forloop.last == false %}, {{auth}}{% else %} and {{auth}}{% endif %}{% endfor %}
     {% if article.abstract %}<p>{{article.abstract}}</p>{% endif %}
-    {% if article.acknowledged %}Received: {{article.acknowledged}}, 
+    {% if article.acknowledged %}Received: {{article.acknowledged}}; 
       online {{article.online}}{% endif %}<br />
-    {% if article.CRANpkgs %}CRAN packages: {{article.CRANpkgs | join: ", "}}
-      {% endif %}
-    {% if article.CTVs %}{{", "}}CRAN Task Views: 
-      {{article.CTVs | join: ", "}}{% endif %}
-    {% if article.BIOpkgs %}{{", "}}Bioconductor packages: 
-      {{article.BIOpkgs | join: ", "}}{% endif %}<br />
+    {% if article.CRANpkgs %}CRAN packages: {% for pkg in article.CRANpkgs %}<a href="https://cran.r-project.org/package={{ pkg }}">{{ pkg }}</a>{% if forloop.last %} {% else %}, {% endif %}{% endfor %}{% endif %}
+    {% if article.CTVs %}{{", "}}CRAN Task Views: {% for ctv in article.CTVs %}<a href="https://cran.r-project.org/view={{ ctv }}">{{ ctv }}</a>{% if forloop.last %} {% else %}, {% endif %}{% endfor %}{% endif %}
+    {% if article.BIOpkgs %}{{", "}}Bioconductor packages: {% for pkg in article.BIOpkgs %}<a href="https://www.bioconductor.org/packages/release/bioc/html/{{ pkg }}.html">{{ pkg }}</a>{% if forloop.last %} {% else %}, {% endif %}{% endfor %}{% endif %}<br />
     </p><br />
     <img src="../../by.png" width="80" height="15" alt="CC BY 4.0" />
     <br />This article is licensed under a
     <a href="https://creativecommons.org/licenses/by/4.0/">
     Creative Commons Attribution 4.0 International license</a>.<br /><br /></p>
 <pre>
-@article{RJ-2017-001,
-  author = {Taylor Arnold and Michael J. Kane and and Simon Urbanek},
-  title = {iotools: High-Performance I/O Tools for R},
-  year = {2017},
-  journal = {The R Journal},
-  url = {https://journal.r-project.org/archive/2017/RJ-2017-001/index.html}
+@article{{lbrace}}{{article.slug}},
+  author = {{lbrace}}{% for authline in article.bibauthor %}{{ authline }}{% endfor %}{{rbrace}},
+  title = {{lbrace}}{{lbrace}}{% for titline in article.bibtitle %}{{ titline }}{% endfor %}{{rbrace}}{{rbrace}},
+  year = {{lbrace}}{{article.landing}}{{rbrace}},
+  journal = {{lbrace}}The R Journal{{rbrace}},
+  url = {{lbrace}}https://journal.r-project.org/archive/{{article.landing}}/{{article.slug}}/index.html{{rbrace}}
 }
 </pre>
 
