--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -19,7 +19,7 @@ layout: default
       This article will be copy edited and may be changed before publication.
       <br />
     {% else %}
-      <h3>Don't go here yet</h3>
+      <h3>Don't go here yet!</h3>
     {% endif %}
     <p class="article">
     <a href="{{article.slug}}.pdf" target="_blank">{{article.title}}</a><br />
