--- a/_layouts/issue_landing-new.html
+++ b/_layouts/issue_landing-new.html
@@ -28,7 +28,7 @@ layout: default
   <a href="{{article.slug}}.pdf" target="_blank">
   {{article.title}}</a><br />
   {% endif %}
-  {{article.author | join: ", "}}
+  {% for auth in article.author %}{% if forloop.first %}{{auth}}{% elsif forloop.last == false %}, {{auth}}{% else %} and {{auth}}{% endif %}{% endfor %}
   {% if article.pages %}<span class="page">{{article.pages[0]}}</span>{% endif %}
 </p>
   {% endif %}
