--- a/_layouts/issue_landing.html
+++ b/_layouts/issue_landing.html
@@ -30,7 +30,7 @@ layout: default
   {% if article.type %}<strong>{{ article.type }}</strong><br />{% endif %}
   <a href="../{{article.landing}}/{{article.slug}}/index.html" target="_blank">
   {{article.title}}</a><br />
-  {{article.author | join: ", "}}
+  {% for auth in article.author %}{% if forloop.first %}{{auth}}{% elsif forloop.last == false %}, {{auth}}{% else %} and {{auth}}{% endif %}{% endfor %}
   {% if article.pages %}<span class="page">{{article.pages[0]}}</span>{% endif %}
 </p>
   {% endif %}
