--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -24,7 +24,7 @@ layout: default
     <p class="article">
     <a href="{{article.slug}}.pdf" target="_blank">{{article.title}}</a><br />
     {% for auth in article.author %}{% if forloop.first %}{{auth}}{% elsif forloop.last == false %}, {{auth}}{% else %} and {{auth}}{% endif %}{% endfor %}
-    {%- if issue.volume -%}{{', '}}<i>The R Journal</i> ({{ issue.year}}) {{ issue.volume }}:{{ issue.num }}{% if article.pages %}, pages {{ article.pages | join: "-"}}.{% endif %}{%- endif -%}
+    {%- if issue.volume -%}{{', '}}<i>The R Journal</i> ({{ issue.year}}) {{ issue.volume }}:{{ issue.num }}{%- if article.pages -%}, pages {{ article.pages | join: "-"}}.{%- endif -%}{%- endif -%}
     {% if article.abstract %}<p>{{article.abstract}}</p>{% endif %}
     {% if article.acknowledged %}Received: {{article.acknowledged}}; 
       online {{article.online}}{% endif %}<br />
