--- a/_layouts/issue-bib-new.html
+++ b/_layouts/issue-bib-new.html
@@ -22,7 +22,7 @@ layout: default
   number       = {{issue.num}},
   pages        = {{lbrace}}{{article.pages | join: "--"}}{{rbrace}},
   month        = {{issue.bibmonth}},
-  url          = {http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/{% if article.landing %}{{article.old_slug }}{% else %}{{article.slug}}{% endif %}.pdf}
+  url          = {% if article.landing %}{{lbrace}}http://journal.r-project.org/archive/{{article.landing}}/{{article.slug}}/index.html{{rbrace}}{% else %}{{lbrace}}http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/{{article.slug }}.pdf{{rbrace}}{% endif %}
 }
 </pre>
   </li>
