--- a/_layouts/issue-bib.html
+++ b/_layouts/issue-bib.html
@@ -22,7 +22,7 @@ layout: default
   number       = {{issue.num}},
   pages        = {{lbrace}}{{article.pages | join: "--"}}{{rbrace}},
   month        = {{issue.bibmonth}},
-  url          = {http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf}
+  url          = {% if article.landing %}{{lbrace}}http://journal.r-project.org/archive/{{article.landing}}/{{article.slug}}/index.html{{rbrace}}{% else %}{{lbrace}}http://journal.r-project.org/archive/{{issue.year}}-{{issue.num}}/RJournal_{{issue.year}}-{{issue.num}}_{{article.slug}}.pdf{{rbrace}}{% endif %}
 }
 </pre>
   </li>
