--- a/r-journal.css
+++ b/r-journal.css
@@ -29,6 +29,8 @@ li {
     margin-bottom: 0.5em;
 }
 
+
+
 #header img {
     padding: 0px 10px 0px 0px;
     vertical-align: -10%;
@@ -124,6 +126,7 @@ div#content blockquote {
     font-size:0.9em
 }
 
+
 div#content dl { 
     padding: 0.2em 0 0 0;
 } 
@@ -136,6 +139,12 @@ div#content dt {
 div#content dd {
     padding: 0.1em 0 0.1em 0.2em; 
 }
+
+div#content dd::after {
+    content: "";
+    display: block;
+    clear: left;
+} 
 
 /* R colours
 #484840 R dark grey
