--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,53 +5,66 @@ navigation:
 - text: "Current Issue"
   url: "/archive/2016-2"
 - text: "Accepted Articles"
-  url: "/archive/accepted/" 
+  url: "/archive/accepted/"
 - text: "Archive"
-  url: "/archive" 
+  url: "/archive"
 - text: "Submissions"
-  url: "/submissions.html" 
+  url: "/submissions.html"
 - text: "Editorial Board"
-  url: "/board.html" 
+  url: "/board.html"
 ---
 <!DOCTYPE html>
-
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>{%if page_title %}{{page_title}}{% else %}{{page.title}}{% endif %} The R Journal</title>
+
   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
+  <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/R.css" rel="stylesheet">
+  <link rel="alternate" type="application/rss+xml" title="Rjournal RSS feed" href="/rss.atom">
 
-  <link rel="stylesheet" type="text/css" href="/r-journal.css">
-  <link rel="alternate" type="application/rss+xml" title="Rjournal RSS feed"
-    href="/rss.atom">
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 
 <body>
 
-<div id="header">
-<h1>The <img src="/RLogo.png" width="101" height="77" alt="R" /> Journal</h1>
+<div class="container page">
+  <div class="row">
+    <div class="col-xs-12 col-sm-offset-1 col-sm-2 sidebar" role="navigation">
 
-<p id="rss"><a href="/rss.atom"><img src="/rss.png" alt="">RSS Feed</a><br />
-ISSN: 2073-4859</p>
-</div>
+    <h1>The <img src="/RLogo.png" width="101" height="77" alt="R" /> Journal</h1>
 
-<div id = "spacer"></div>
+    <p id="rss">
+      <a href="/rss.atom"><img src="/rss.png" alt="">RSS Feed</a><br />
+      ISSN: 2073-4859
+    </p>
 
-<div id="navigation"><ul>
-{% for link in page.navigation %}
-  {% if page.url == link.url %}
-    {% assign current = 'current' %}
-  {% else %}
-    {% assign current = nil %}
-  {% endif %}
-  <li class="{{ current }}"><a href="{{ link.url }}">{{ link.text }}</a></li>
-{% endfor %}
-</ul></div>
+    <ul>
+    {% for link in page.navigation %}
+      {% if site.page.url == link.url %}
+        {% assign current = 'current' %}
+      {% else %}
+        {% assign current = nil %}
+      {% endif %}
+      <li class="{{ current }}"><a href="{{ link.url }}">{{ link.text }}</a></li>
+    {% endfor %}
+    </ul>
 
-<div id="content">
-{{content}}
-</div>
+  </div>
+
+  <div class="col-xs-12 col-sm-7">
+    {{content}}
+  </div>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -62,5 +75,6 @@ ISSN: 2073-4859</p>
   ga('create', 'UA-40966673-1', 'r-project.org');
   ga('send', 'pageview');
 </script>
+
 </body>
 </html>
