Fix sidebar navigation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@ navigation:
     </p>
 
     <ul>
-    {% for link in page.navigation %}
+    {% for link in layout.navigation %}
       {% if site.page.url == link.url %}
         {% assign current = 'current' %}
       {% else %}
