CSS tweaks for R journal

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,5 @@
 ---
 navigation:
-- text: "Home"
-  url: "/index.html"
 - text: "Current Issue"
   url: "/archive/2016-2"
 - text: "Accepted Articles"
@@ -26,7 +24,9 @@ navigation:
   <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
   <link href="/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/R.css" rel="stylesheet">
-  <link rel="alternate" type="application/rss+xml" title="Rjournal RSS feed" href="/rss.atom">
+  <link href="/css/R-journal.css" rel="stylesheet">
+
+  <link rel="alternate" type="application/rss+xml" title="R Journal RSS feed" href="/rss.atom">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -42,13 +42,9 @@ navigation:
   <div class="row">
     <div class="col-xs-12 col-sm-offset-1 col-sm-2 sidebar" role="navigation">
 
-    <h1>The <img src="/RLogo.png" width="101" height="77" alt="R" /> Journal</h1>
+    <h1><a href="/">The <img src="/RLogo.png" width="101" height="77" alt="R" /> Journal</a></h1>
 
-    <p id="rss">
-      <a href="/rss.atom"><img src="/rss.png" alt="">RSS Feed</a><br />
-      ISSN: 2073-4859
-    </p>
-
+    <h2>Navigation</h2>
     <ul>
     {% for link in layout.navigation %}
       {% if site.page.url == link.url %}
@@ -59,6 +55,10 @@ navigation:
       <li class="{{ current }}"><a href="{{ link.url }}">{{ link.text }}</a></li>
     {% endfor %}
     </ul>
+
+    <h2>Subscribe</h2>
+    <p><a href="/rss.atom">RSS Feed <img src="/rss.png" width="13" height="13" alt="" /></a></p>
+    <p>ISSN: 2073-4859</p>
 
   </div>
 
