Separate out R Journal and R News

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@ navigation:
   url: "/archive/accepted/"
 - text: "Archive"
   url: "/archive"
+- text: "R News"
+  url: "/archive/r-news.html"
 - text: "Submissions"
   url: "/submissions.html"
 - text: "Editorial Board"
