--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 navigation:
 - text: "Current Issue"
   url: "/archive/2016-2"
-- text: "Accepted Articles"
+- text: "Accepted articles"
   url: "/archive/accepted/"
 - text: "Archive"
   url: "/archive"
@@ -44,7 +44,7 @@ navigation:
   <div class="row">
     <div class="col-xs-12 col-sm-offset-1 col-sm-2 sidebar" role="navigation">
 
-    <h1><a href="/">The <img src="/RLogo.png" width="101" height="77" alt="R" /> Journal</a></h1>
+    <h1><a href="/"><img src="/RLogo.png" width="101" height="77" alt="R" /></a></h1>
 
     <h2>Navigation</h2>
     <ul>
