--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -15,11 +15,11 @@ layout: default
    {% if article.slug == page.slug %}
 
     {% if page.issue == "accepted" %}
-      <h3>Accepted article</h3>
+      <h2>The R Journal: accepted article</h2>
       This article will be copy edited and may be changed before publication.
       <br />
     {% else %}
-      <h3>Article published in {{ issue.year }}, volume {{ issue.volume }}:{{ issue.num }}</h3>
+      <h2>The R Journal: article published in {{ issue.year }}, volume {{ issue.volume }}:{{ issue.num }}</h2>
     {% endif %}
     <p class="article">
     <a href="{{article.slug}}.pdf" target="_blank">{{article.title}}</a><br />
