--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,30 +43,37 @@ navigation:
 <div class="container page">
   <div class="row">
     <div class="col-xs-12 col-sm-offset-1 col-sm-2 sidebar" role="navigation">
+      <h1><a href="/"><img src="/RLogo.png" width="101" height="77" alt="R" /></a></h1>
 
-    <h1><a href="/"><img src="/RLogo.png" width="101" height="77" alt="R" /></a></h1>
+      <h2>Navigation</h2>
+      <ul>
+      {% for link in layout.navigation %}
+        {% if site.page.url == link.url %}
+          {% assign current = 'current' %}
+        {% else %}
+          {% assign current = nil %}
+        {% endif %}
+        <li class="{{ current }}"><a href="{{ link.url }}">{{ link.text }}</a></li>
+      {% endfor %}
+      </ul>
 
-    <h2>Navigation</h2>
-    <ul>
-    {% for link in layout.navigation %}
-      {% if site.page.url == link.url %}
-        {% assign current = 'current' %}
-      {% else %}
-        {% assign current = nil %}
-      {% endif %}
-      <li class="{{ current }}"><a href="{{ link.url }}">{{ link.text }}</a></li>
-    {% endfor %}
-    </ul>
+      <h2>Subscribe</h2>
+      <p><a href="/rss.atom">RSS Feed <img src="/rss.png" width="13" height="13" alt="" /></a></p>
+      <p>ISSN: 2073-4859</p>
 
-    <h2>Subscribe</h2>
-    <p><a href="/rss.atom">RSS Feed <img src="/rss.png" width="13" height="13" alt="" /></a></p>
-    <p>ISSN: 2073-4859</p>
+    </div>
 
+    <div class="col-xs-12 col-sm-7">
+      {{content}}
+    </div>
   </div>
 
-  <div class="col-xs-12 col-sm-7">
-    {{content}}
+  <div class="row">
+    <div class="col-xs-12">
+      <footer>&copy; The R Foundation.</footer>
+    </div>
   </div>
+</div>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
