--- a/css/R-journal.css
+++ b/css/R-journal.css
@@ -3,3 +3,12 @@
 
 .sidebar img {vertical-align: text-top;}
 dt {margin-top: 1em;}
+
+footer {
+  border-top: 2px solid #ddd;
+  background-color: #fafafa;
+  margin-top: 3em;
+  padding: 1em 0.5em 1.5em 0.5em;
+  font-size: 90%;
+  color: #666;
+}
