--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@ navigation:
 
   <div class="row">
     <div class="col-xs-12">
-      <footer>&copy; The R Foundation.</footer>
+      <footer>&copy; The R Foundation, <a href="mailto:r-journal@r-project.org">web page contact</a>.</footer>
     </div>
   </div>
 </div>
