--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@ navigation:
   url: "/archive/r-news.html"
 - text: "Submissions"
   url: "/submissions.html"
+- text: "Reviews and Proofreading"
+  url: "/reviews-etc.html"
 - text: "Editorial Board"
   url: "/board.html"
 ---
