--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -22,7 +22,8 @@ layout: default
       <h2>The R Journal: article published in {{ issue.year }}, volume {{ issue.volume }}:{{ issue.num }}</h2>
     {% endif %}
     <p class="article">
-    <a href="{{article.slug}}.pdf" target="_blank">{{article.title}}</a><br />
+    <a href="{{article.slug}}.pdf" target="_blank">{{article.title}} 
+    <img src="../../PDF-icon.png" width="25" height="24" alt="PDF download"/></a> <br />
     {% for auth in article.author %}{% if forloop.first %}{{auth}}{% elsif forloop.last == false %}, {{auth}}{% else %} and {{auth}}{% endif %}{% endfor %}
     {% if issue.volume %}{{', '}}<i>The R Journal</i> ({{ issue.year}}) {{ issue.volume }}:{{ issue.num }}{% if article.pages %}, pages {{ article.pages | join: "-"}}.{% endif %}{% endif %}
     {% if article.abstract %}<p>{{article.abstract}}</p>{% endif %}
