--- a/_layouts/issue_landing.html
+++ b/_layouts/issue_landing.html
@@ -7,12 +7,14 @@ layout: default
 {% for issue in site.issues %}
 {% if issue.issue == page.issue %}
 
-<h1>{{page.title}}</h1>
+<h2>{{page.title}}</h2>
 
 {% if issue.issue != "accepted" %}
 
-<p><a href="RJournal_{{issue.issue}}.pdf">Complete issue</a></p>
+<p><a href="RJournal_{{issue.issue}}.pdf">Complete issue <img src="../PDF-icon.png" width="25" height="24" alt="PDF download"/></a></p>
 <p><a href="index-bib.html">Complete bibliography</a></p>
+
+<p>Access the article landing page through its title or go straight to the article through the PDF icon:</p>
 
 <h2>Table of contents</h2>
 
@@ -29,7 +31,9 @@ layout: default
 <p class="article">
   {% if article.type %}<strong>{{ article.type }}</strong><br />{% endif %}
   <a href="../{{article.landing}}/{{article.slug}}/index.html" target="_blank">
-  {{article.title}}</a><br />
+  {{article.title}}</a>
+  <a href="../{{article.landing}}/{{article.slug}}/{{article.slug}}.pdf" target="_blank">
+<img src="../PDF-icon.png" width="25" height="24" alt="PDF download"/></a><br />
   {% for auth in article.author %}{% if forloop.first %}{{auth}}{% elsif forloop.last == false %}, {{auth}}{% else %} and {{auth}}{% endif %}{% endfor %}
   {% if article.pages %}<span class="page">{{article.pages[0]}}</span>{% endif %}
 </p>
