--- a/_layouts/issue_landing-new.html
+++ b/_layouts/issue_landing-new.html
@@ -10,7 +10,7 @@ layout: default
 
 <h2>{{page.title}}</h2>
 
-<p><a href="RJ-{{issue.issue}}.pdf">Complete issue <img src="../PDF-icon.png" width="25" height="24" alt="PDF download"/></a></p>
+<p><a href="RJ-{{issue.issue}}.pdf" target="_blank">Complete issue <img src="../PDF-icon.png" width="25" height="24" alt="PDF download"/></a></p>
 <p><a href="index-bib.html">Complete bibliography</a></p>
 
 <p>Access the article landing page through its title or go straight to the article through the PDF icon:</p>
