--- a/_layouts/issue_landing.html
+++ b/_layouts/issue_landing.html
@@ -11,7 +11,7 @@ layout: default
 
 {% if issue.issue != "accepted" %}
 
-<p><a href="RJournal_{{issue.issue}}.pdf">Complete issue <img src="../PDF-icon.png" width="25" height="24" alt="PDF download"/></a></p>
+<p><a href="RJournal_{{issue.issue}}.pdf" target="_blank">Complete issue <img src="../PDF-icon.png" width="25" height="24" alt="PDF download"/></a></p>
 <p><a href="index-bib.html">Complete bibliography</a></p>
 
 <p>Access the article landing page through its title or go straight to the article through the PDF icon:</p>
