--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -28,11 +28,12 @@ layout: default
     {% if issue.volume %}{{', '}}<i>The R Journal</i> ({{ issue.year}}) {{ issue.volume }}:{{ issue.num }}{% if article.pages %}, pages {{ article.pages | join: "-"}}.{% endif %}{% endif %}
     {% if article.abstract %}<p>{{article.abstract}}</p>{% endif %}
     {% if article.acknowledged %}Received: {{article.acknowledged}}; 
-      online {{article.online}}{% endif %}<br />
+      online {{article.online}}{% endif %}{% if article.suppl %}{{", "}}<a href="{{article.slug}}.zip">supplementary material</a>, ({{article.suppl}}){% endif %}<br />
     {% if article.CRANpkgs %}CRAN packages: {% for pkg in article.CRANpkgs %}<a href="https://cran.r-project.org/package={{ pkg }}">{{ pkg }}</a>{% if forloop.last %}{% else %}, {% endif %}{% endfor %}{% endif %}
     {% if article.CTVs %}{{", "}}CRAN Task Views cited directly: {% for ctv in article.CTVs %}<a href="https://cran.r-project.org/view={{ ctv }}">{{ ctv }}</a>{% if forloop.last %}{% else %}, {% endif %}{% endfor %}{% endif %}
     {% if article.CTV_rev %}{{", "}}CRAN Task Views implied by cited CRAN packages: {% for ctv in article.CTV_rev %}<a href="https://cran.r-project.org/view={{ ctv }}">{{ ctv }}</a>{% if forloop.last %}{% else %}, {% endif %}{% endfor %}{% endif %}
     {% if article.BIOpkgs %}{% if article.CRANpkgs %}{{", "}}{% endif %}Bioconductor packages: {% for pkg in article.BIOpkgs %}<a href="https://www.bioconductor.org/packages/release/bioc/html/{{ pkg }}.html">{{ pkg }}</a>{% if forloop.last %}{% else %}, {% endif %}{% endfor %}{% endif %}<br />
+    
     {% if article.landing == "2011" %}{% if issue.num == 2 %}
     </p><br />
     <img src="../../by.png" width="80" height="15" alt="CC BY" />
@@ -42,7 +43,7 @@ layout: default
     {% elsif article.landing > "2011" %}
     </p><br />
     <img src="../../by.png" width="80" height="15" alt="CC BY 4.0" />
-    <br />This article is licensed under a
+    <br />This article {% if article.suppl %}{{ "and supplementary materials are" }}{% else %}{{ "is" }}{% endif %} licensed under a
     {% if article.landing < "2017" %}
     <a href="https://creativecommons.org/licenses/by/3.0/">
     Creative Commons Attribution 3.0 Unported license</a>
