--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -29,10 +29,10 @@ layout: default
     {% if article.abstract %}<p>{{article.abstract}}</p>{% endif %}
     {% if article.acknowledged %}Received: {{article.acknowledged}}; 
       online {{article.online}}{% endif %}{% if article.suppl %}{{", "}}<a href="{{article.slug}}.zip">supplementary material</a>, ({{article.suppl}}){% endif %}<br />
-    {% if article.CRANpkgs %}CRAN packages: {% for pkg in article.CRANpkgs %}<a href="https://cran.r-project.org/package={{ pkg }}">{{ pkg }}</a>{% if forloop.last %}{% else %}, {% endif %}{% endfor %}{% endif %}
-    {% if article.CTVs %}{{", "}}CRAN Task Views cited directly: {% for ctv in article.CTVs %}<a href="https://cran.r-project.org/view={{ ctv }}">{{ ctv }}</a>{% if forloop.last %}{% else %}, {% endif %}{% endfor %}{% endif %}
-    {% if article.CTV_rev %}{{", "}}CRAN Task Views implied by cited CRAN packages: {% for ctv in article.CTV_rev %}<a href="https://cran.r-project.org/view={{ ctv }}">{{ ctv }}</a>{% if forloop.last %}{% else %}, {% endif %}{% endfor %}{% endif %}
-    {% if article.BIOpkgs %}{% if article.CRANpkgs %}{{", "}}{% endif %}Bioconductor packages: {% for pkg in article.BIOpkgs %}<a href="https://www.bioconductor.org/packages/release/bioc/html/{{ pkg }}.html">{{ pkg }}</a>{% if forloop.last %}{% else %}, {% endif %}{% endfor %}{% endif %}<br />
+    {% if article.CRANpkgs %}CRAN packages: {% for pkg in article.CRANpkgs %}<a href="https://cran.r-project.org/package={{ pkg }}">{{ pkg }}</a>{% if forloop.last %}{{""}}{% else %}{{", "}}{% endif %}{% endfor %}<br />{% endif %}
+    {% if article.CTVs %}CRAN Task Views cited directly: {% for ctv in article.CTVs %}<a href="https://cran.r-project.org/view={{ ctv }}">{{ ctv }}</a>{% if forloop.last %}{{""}}{% else %}{{", "}}{% endif %}{% endfor %}<br />{% endif %}
+    {% if article.CTV_rev %}CRAN Task Views implied by cited CRAN packages: {% for ctv in article.CTV_rev %}<a href="https://cran.r-project.org/view={{ ctv }}">{{ ctv }}</a>{% if forloop.last %}{% else %}, {% endif %}{% endfor %}<br />{% endif %}
+    {% if article.BIOpkgs %}Bioconductor packages: {% for pkg in article.BIOpkgs %}<a href="https://www.bioconductor.org/packages/release/bioc/html/{{ pkg }}.html">{{ pkg }}</a>{% if forloop.last %}{% else %}, {% endif %}{% endfor %}<br />{% endif %}<br />
     
     {% if article.landing == "2011" %}{% if issue.num == 2 %}
     </p><br />
