add meta tags for google scholar to default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,33 @@ navigation:
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% for issue in site.issues %}
+   {% if issue.issue == page.issue %}
+    {% for article in issue.articles %} 
+     {% if article.slug == page.slug %}
+      <link rel="canonical" href="https://journal.r-project.org/archive/{{article.landing}}/{{article.slug}}/index.html" />
+      <meta name="citation_journal_title" content="The R Journal" />
+      <meta name="citation_issn" content="2073-4859" />
+      {% for auth in article.author %}
+        <meta name="citation_author" content="{{ auth }}" />
+      {% endfor %}
 
+      <meta name="citation_title" content="{{article.title}}" />
+      <meta name="citation_date" content="{{article.landing}}" />
+      {% if issue.volume %}
+	<meta name="citation_volume" content="{{ issue.volume }}" />
+	<meta name="citation_issue" content="{{ issue.num }}" />
+	<meta name="citation_firstpage" content="{{ article.pages[0] }}" />
+	<meta name="citation_lastpage" content="{{ article.pages[1] }}" />
+      {% endif %}
+      <!-- <meta name="citation_doi" content="" /> -->
+      <meta name="citation_abstract_html_url" content="https://journal.r-project.org/archive/{{article.landing}}/{{article.slug}}/index.html" />
+      <meta name="citation_language" content="en" />
+      <meta name="citation_fulltext_html_url" content="https://journal.r-project.org/archive/{{article.landing}}/{{article.slug}}/{{article.slug}}.pdf" />
+     {% endif %}
+    {% endfor %}
+   {% endif %}
+  {% endfor %}
   <title>{%if page_title %}{{page_title}}{% else %}{{page.title}}{% endif %} The R Journal</title>
 
   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
