--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@ navigation:
   url: "/archive"
 - text: "R News"
   url: "/archive/r-news.html"
+- text: "News and Notes"
+  url: "/archive/news-notes.html"
 - text: "Submissions"
   url: "/submissions.html"
 - text: "Reviews and Proofreading"
