add DOI detals; put online

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,5 +1,5 @@
 ---
-comment: This is the layout for a landing page for single articles from 2017
+comment: This is the layout for a landing page for single articles from 2017; DOI added for 2018-02
 layout: default
 ---
 
@@ -11,7 +11,7 @@ layout: default
 {% for issue in site.issues %}
  {% if issue.issue == page.issue %}
 
-  {% for article in issue.articles %} 
+  {% for article in issue.articles %}
    {% if article.slug == page.slug %}
 
     {% if page.issue == "accepted" %}
@@ -22,18 +22,18 @@ layout: default
       <h2>The R Journal: article published in {{ issue.year }}, volume {{ issue.volume }}:{{ issue.num }}</h2>
     {% endif %}
     <p class="article">
-    <a href="{{article.slug}}.pdf" target="_blank">{{article.title}} 
+    <a href="{{article.slug}}.pdf" target="_blank">{{article.title}}
     <img src="../../PDF-icon.png" width="25" height="24" alt="PDF download"/></a> <br />
     {% for auth in article.author %}{% if forloop.first %}{{auth}}{% elsif forloop.last == false %}, {{auth}}{% else %} and {{auth}}{% endif %}{% endfor %}
     {% if issue.volume %}{{', '}}<i>The R Journal</i> ({{ issue.year}}) {{ issue.volume }}:{{ issue.num }}{% if article.pages %}, pages {{ article.pages | join: "-"}}.{% endif %}{% endif %}
     {% if article.abstract %}<p>{{article.abstract}}</p>{% endif %}
-    {% if article.acknowledged %}Received: {{article.acknowledged}}; 
+    {% if article.acknowledged %}Received: {{article.acknowledged}};
       online {{article.online}}{% endif %}{% if article.suppl %}{{", "}}<a href="{{article.slug}}.zip">supplementary material</a>, ({{article.suppl}}){% endif %}<br />
     {% if article.CRANpkgs %}CRAN packages: {% for pkg in article.CRANpkgs %}<a href="https://cran.r-project.org/package={{ pkg }}">{{ pkg }}</a>{% if forloop.last %}{{""}}{% else %}{{", "}}{% endif %}{% endfor %}<br />{% endif %}
     {% if article.CTVs %}CRAN Task Views cited directly: {% for ctv in article.CTVs %}<a href="https://cran.r-project.org/view={{ ctv }}">{{ ctv }}</a>{% if forloop.last %}{{""}}{% else %}{{", "}}{% endif %}{% endfor %}<br />{% endif %}
     {% if article.CTV_rev %}CRAN Task Views implied by cited CRAN packages: {% for ctv in article.CTV_rev %}<a href="https://cran.r-project.org/view={{ ctv }}">{{ ctv }}</a>{% if forloop.last %}{% else %}, {% endif %}{% endfor %}<br />{% endif %}
     {% if article.BIOpkgs %}Bioconductor packages: {% for pkg in article.BIOpkgs %}<a href="https://www.bioconductor.org/packages/release/bioc/html/{{ pkg }}.html">{{ pkg }}</a>{% if forloop.last %}{% else %}, {% endif %}{% endfor %}<br />{% endif %}<br />
-    
+
     {% if article.landing == "2011" %}{% if issue.num == 2 %}
     </p><br />
     <img src="../../by.png" width="80" height="15" alt="CC BY" />
@@ -56,7 +56,9 @@ layout: default
   title = {{lbrace}}{{lbrace}}{% for titline in article.bibtitle %}{{ titline }}{% endfor %}{{rbrace}}{{rbrace}},
   year = {{lbrace}}{{article.landing}}{{rbrace}},
   journal = {{lbrace}}{{lbrace}}The R Journal{{rbrace}}{{rbrace}},
-  url = {{lbrace}}https://journal.r-project.org/archive/{{article.landing}}/{{article.slug}}/index.html{{rbrace}}{% if article.pages %},
+  doi = {{lbrace}}10.32614/{{article.slug}}{{rbrace}},{% if page.issue == "accepted" %}
+  url = {{lbrace}}https://journal.r-project.org/archive/{{article.landing}}/{{article.slug}}/index.html{{rbrace}}{% else %}
+  url = {{lbrace}}https://doi.org/10.32614/{{article.slug}}{{rbrace}} {% endif %}{% if article.pages %},
   pages = {{lbrace}}{{ article.pages | join: "--"}}{{rbrace}},
   volume = {{lbrace}}{{ issue.volume }}{{rbrace}},
   number = {{lbrace}}{{ issue.num }}{{rbrace}}{% endif %}
