AE's added and resubmission info update.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,8 @@ navigation:
   url: "/submissions.html"
 - text: "Reviews and Proofreading"
   url: "/reviews-etc.html"
+- text: "Become a Reviewer"
+  url: "/reviewer.html"
 - text: "Editorial Board"
   url: "/board.html"
 ---
