--- a/_web/theme.css
+++ b/_web/theme.css
@@ -83,3 +83,13 @@ d-appendix {
 d-title h1 {
   grid-column: page;
 }
+
+.rj-blue {
+  color: #2467bb;
+}
+
+ul li {
+  line-height: 1.6;
+  margin-top: 0em;
+  margin-bottom: 0em;
+}
