--- a/theme.css
+++ b/theme.css
@@ -80,7 +80,8 @@ d-appendix {
   text-transform: uppercase;
 }
 
-d-title h1 {
+d-title h1, d-title p, d-title figure,
+d-abstract p, d-abstract b {
   grid-column: page;
 }
 
